--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write \"./**/*.{html,vue,ts,js,json,md}\"",
     "lint:eslint": "eslint src/**/*.{ts,vue} --cache --fix",
     "lint:style": "stylelint src/**/*.{css,scss,vue} --cache --fix",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "commitlint": "commitlint --config commitlint.config.cjs -e -V"
   },
   "dependencies": {
     "axios": "^1.13.2",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.28.5",
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@eslint/js": "latest",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.1",
