--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-vue": "^10.6.2",
     "globals": "^16.5.0",
     "husky": "^8.0.0",
+    "mockjs": "^1.1.0",
     "postcss": "^8.5.6",
     "postcss-html": "^1.8.0",
     "postcss-scss": "^4.0.9",
@@ -60,6 +61,7 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.48.0",
     "vite": "^7.2.4",
+    "vite-plugin-mock": "^3.0.2",
     "vite-plugin-svg-icons": "^2.0.1",
     "vite-plugin-vue-devtools": "^8.0.5",
     "vite-plugin-vue-setup-extend": "^0.4.0",
