--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@commitlint/config-conventional": "^20.0.0",
     "@eslint/js": "latest",
     "@types/node": "^24.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.39.1",
