--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
+    "@types/nprogress": "^0.2.3",
     "axios": "^1.13.2",
     "element-plus": "^2.11.9",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.24",
     "vue-router": "^4.6.3"
